requirements.txt file path changed
I updated it accordingly

--- a/docs/getting-started/index.mdx
+++ b/docs/getting-started/index.mdx
@@ -234,7 +234,7 @@ conda create --name open-webui-env python=3.11
 conda activate open-webui-env
 
 # Install dependencies
-pip install -r requirements.txt -U
+pip install -r backend/requirements.txt -U
 
 # Start the application
 bash start.sh
@@ -257,7 +257,7 @@ cd .\backend
 conda create --name open-webui-env python=3.11
 conda activate open-webui-env
 
-pip install -r requirements.txt -U
+pip install -r backend/requirements.txt -U
 
 start.bat
 ```
