composer-dev.yaml to develop-watch syntax changes needed for latest docker composer version
Develop-watch section needs update to accommodate latest docker compose syntax

--- a/docs/getting-started/development.mdx
+++ b/docs/getting-started/development.mdx
@@ -115,8 +115,9 @@ services:
       - "3000:5173"
     develop:
       watch:
-        path: ./src
-        action: sync
+        - action: sync
+          path: ./src
+          target: /app/src
 
   backend:
     build:
@@ -136,8 +137,9 @@ services:
     restart: always
     develop:
       watch:
-        path: ./backend
-        action: sync
+        - action: sync
+          path: ./backend
+          target: /app/backend
 
 volumes:
   data: {}
