--- a/docs/tutorials/deployment/index.mdx
+++ b/docs/tutorials/deployment/index.mdx
@@ -7,10 +7,8 @@ import { TopBanners } from "@site/src/components/TopBanners";
 <TopBanners />
 
 :::info
-
-# **Seeking Contributors!**
-
-👋 Calling all youtubers! Want to showcase Open WebUI's features in a video? We'll feature it at the top of our guide section!
+# 📢 **Calling all YouTubers!**
+We're looking for talented individuals to create videos showcasing Open WebUI's features. If you make a video, we'll feature it at the top of our guide section!
 :::
 
 <iframe
