--- a/docs/faq.mdx
+++ b/docs/faq.mdx
@@ -7,7 +7,7 @@ import { TopBanners } from "@site/src/components/TopBanners";
 
 <TopBanners />
 
-### 💡 **Why Docker?**
+### 💡 Why Docker?
 We understand Docker might not be everyone's preference; however, this approach is central to our project's design and operational efficiency. We view the project's commitment to Docker as a fundamental aspect and encourage those looking for different deployment methods to explore community-driven alternatives.
 
 ### 📜 Table of Contents
