--- a/docs/roadmap.mdx
+++ b/docs/roadmap.mdx
@@ -17,13 +17,13 @@ Our roadmap for interface innovations aims to create a highly intuitive and acce
 
 - 🔊 **Local Text-to-Speech Integration**: This feature will allow natural language processing to convert text into lifelike spoken audio, thus making the platform more accessible, especially for visually impaired users. This integration helps in consuming information without screen interaction, facilitating multitasking and improving user engagement.
 
-- 🛡️ **Granular Permissions and User Groups**: By allowing administrators to create detailed user roles and permissions, we ensure a secure user environment. This granularity not only enhances security but also allows for customized user experiences, fostering a sense of ownership and responsibility amongst users.
+- 🛡️ **Teams: Granular Permissions and User Groups**: By allowing administrators to create detailed user roles and permissions, we ensure a secure user environment. This granularity not only enhances security but also allows for customized user experiences, fostering a sense of ownership and responsibility amongst users.
+
+- 📁 **Knowledge/Projects Feature**: Improved document management ensures that project documents are well-organized and easily accessible.
+
+- 🧠 **AI Workflow Tool**: A node-based tool to orchestrate and compose multiple aspects of AI systems. This tool will allow users to visually connect different AI modules and services, creating complex workflows with ease. It's designed to empower users to harness the full potential of AI without needing deep technical knowledge in AI programming.
 
 - 🔧 **Fine-tune Model (LoRA)**: This feature allows users to adjust specific parameters of the model directly through the UI. Fine-tuning can significantly boost the model’s efficiency by adapting it to specific contexts or industries, enhancing personalization and relevancy of responses.
-
-- 🧑‍🤝‍🧑 **Teams Feature**: Enhancements in team collaboration tools will streamline workflows, making project management smoother and more efficient, thereby reducing the time to market for team initiatives.
-
-- 📁 **Projects Feature**: Improved document management ensures that project documents are well-organized and easily accessible, enhancing collaboration and productivity across diverse geographical locations.
 
 - 📣 **Wakeword Detection**: Incorporating hands-free operation through voice commands will not only enhance accessibility but also align with emerging trends in IoT and smart environments, making our platform future-ready.
 
