--- a/docs/tutorials/plugin/index.mdx
+++ b/docs/tutorials/plugin/index.mdx
@@ -13,7 +13,7 @@ Let's start by thinking of **Open WebUI** as a "base" software that can do many 
 
 ### Tools
 
-**Tools** are an exciting feature because they allow OpenAI-like models (LLMs) to do more than just process text. They provide **external abilities** that LLMs wouldn't otherwise have on their own.
+**Tools** are an exciting feature because they allow LLMs to do more than just process text. They provide **external abilities** that LLMs wouldn't otherwise have on their own.
 
 #### Example of a Tool:
 
