Add API Endpoints guide and update Advanced Topics index

--- a/docs/getting-started/advanced-topics/index.mdx
+++ b/docs/getting-started/advanced-topics/index.mdx
@@ -11,25 +11,31 @@ Explore deeper concepts and advanced configurations of Open WebUI to enhance you
 
 ## 🔧 Environment Configuration  
 Understand how to set environment variables to customize your Open WebUI setup.  
-[Environment Configuration Guide](./EnvConfig)
+[Environment Configuration Guide](./env-configuration)
 
 ---
 
 ## 📊 Logging and Monitoring  
 Learn how to monitor, log, and troubleshoot your system effectively.  
-[Logging and Monitoring Guide](./Logging)
+[Logging and Monitoring Guide](./logging)
 
 ---
 
 ## 🛠️ Development Guide  
 Dive into the development process and learn how to contribute to Open WebUI.  
-[Development Guide](./Development)
+[Development Guide](./development)
 
 ---
 
 ## 🔒 HTTPS Encryption  
 Ensure secure communication by implementing HTTPS encryption in your deployment.  
-[HTTPS Encryption Guide](./HttpsEncryption)
+[HTTPS Encryption Guide](./https-encryption)
+
+---
+
+## 🔗 API Endpoints  
+Get essential information for API integration and automation using our models.  
+[API Endpoints Guide](./api-endpoints)
 
 ---
 
