Update links to advanced-topics/env-configuration and finalize pending link updates

--- a/docs/getting-started/using-openwebui/index.mdx
+++ b/docs/getting-started/using-openwebui/index.mdx
@@ -11,13 +11,17 @@ Explore the essential concepts and features of Open WebUI, including models, kno
 
 ## 📥 Ollama Models  
 Learn how to download, load, and use models effectively.  
-[Check out Ollama Models](./OllamaModels.mdx)
+[Check out Ollama Models](./ollama-models.mdx)
 
 ---
 
 ## 📚 Terminology  
 Understand key components: models, prompts, knowledge, functions, pipes, and actions.  
-[Read the Terminology Guide](./Terminology.mdx)
+[Read the Terminology Guide](./terminology.mdx)
+
+## 🌐 Additional Resources and Integrations  
+Find community tools, integrations, and official resources.  
+[Additional Resources Guide](./resources)
 
 ---
 
