Update links for env-configuration and update guide references

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -43,7 +43,7 @@ import { SponsorList } from "@site/src/components/SponsorList";
 
 #### Disabling Login for Single User
 
-If you want to disable login for a single-user setup, set [`WEBUI_AUTH`](/getting-started/env-configuration) to `False`. This will bypass the login page.
+If you want to disable login for a single-user setup, set [`WEBUI_AUTH`](./getting-started/advanced-topics/env-configuration) to `False`. This will bypass the login page.
 
 :::warning
 You cannot switch between single-user mode and multi-account mode after this change.
@@ -161,7 +161,7 @@ If you're facing various issues like "Open WebUI: Server Connection Error", see 
 
 ## Updating
 
-Check out our full [updating guide](/getting-started/updating).
+Check out how to update Docker in the [Quick Start guide](./getting-started/quick-start).
 
 In case you want to update your local Docker installation to the latest version, you can do it with [Watchtower](https://containrrr.dev/watchtower/):
 
