Update sidebar positions and titles in getting-started guide
- Adjusted  for Ollama Models, Additional Resources, and Terminology pages to improve navigation order.
- Simplified 'Additional Resources and Integrations' title to 'Additional Resources' for clarity and conciseness.

--- a/docs/getting-started/using-openwebui/resources.mdx
+++ b/docs/getting-started/using-openwebui/resources.mdx
@@ -1,9 +1,9 @@
 ---
-sidebar_position: 400
-title: "🌐 Additional Resources and Integrations"
+sidebar_position: 4
+title: "🌐 Additional Resources"
 ---
 
-# 🌐 Additional Resources and Integrations
+# 🌐 Additional Resources
 
 Explore more resources, community tools, and integration options to make the most out of Open WebUI.
 
