docs: reworded ollama troubleshooting

--- a/docs/getting-started/using-openwebui/index.mdx
+++ b/docs/getting-started/using-openwebui/index.mdx
@@ -9,9 +9,9 @@ Explore the essential concepts and features of Open WebUI, including models, kno
 
 ---
 
-## 📥 Ollama Models  
-Learn how to download, load, and use models effectively.  
-[Check out Ollama Models](./ollama-models.mdx)
+## 📥 Troubleshooting Ollama
+Many users wish to make use of their existing Ollama instance, but encounter common issues.
+If this is you, then check out the [Troubleshooting Ollama guide](./troubleshooting-ollama.mdx)
 
 ---
 
