docs: updating troubleshooting ollama title

--- a/docs/getting-started/using-openwebui/troubleshooting-ollama.mdx
+++ b/docs/getting-started/using-openwebui/troubleshooting-ollama.mdx
@@ -1,12 +1,12 @@
 ---
 sidebar_position: 2
-title: "🤖Ollama Models"
+title: "🤖Troubleshooting Ollama"
 ---
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-# Ollama Models
+# Troubleshooting Ollama
 
 Explore how to download, load, and use models with Ollama, both via **Docker** and **Remote** setups.
 
