--- a/docs/getting-started/using-openwebui/terminology.mdx
+++ b/docs/getting-started/using-openwebui/terminology.mdx
@@ -10,7 +10,7 @@ Enhance your understanding of OpenWebUI with key concepts and components to impr
 ---
 
 ## Explore the Workspace  
-Begin by exploring the [Workspace](../../tutorials/features/workspace) to discover essential concepts such as Modelfiles, Knowledge, Prompts, Tools, and Functions.
+Begin by exploring the [Workspace](../../features/workspace) to discover essential concepts such as Modelfiles, Knowledge, Prompts, Tools, and Functions.
 
 ---
 
