--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -12,7 +12,7 @@ import { SponsorList } from "@site/src/components/SponsorList";
 
 <TopBanners />
 
-**Open WebUI is an [extensible](https://docs.openwebui.com/tutorials/plugin/), feature-rich, and user-friendly self-hosted AI interface designed to operate entirely offline.** It supports various LLM runners, including Ollama and OpenAI-compatible APIs.
+**Open WebUI is an [extensible](https://docs.openwebui.com/features/plugin/), feature-rich, and user-friendly self-hosted AI interface designed to operate entirely offline.** It supports various LLM runners, including Ollama and OpenAI-compatible APIs.
 
 ![GitHub stars](https://img.shields.io/github/stars/open-webui/open-webui?style=social)
 ![GitHub forks](https://img.shields.io/github/forks/open-webui/open-webui?style=social)
