--- a/docs/getting-started/using-openwebui/resources.mdx
+++ b/docs/getting-started/using-openwebui/resources.mdx
@@ -20,10 +20,12 @@ Visit [Open WebUI](https://openwebui.com/) for official documentation, tools, an
 ## 🌍 Community Platforms
 Connect with the Open WebUI community for support, tips, and discussions.
 
-- **Discord**: Join our community on Discord to chat with other users, ask questions, and stay updated.
+- **Discord**: Join our community on Discord to chat with other users, ask questions, and stay updated.  
   [Join the Discord Server](https://discord.com/invite/5rJgQTnV4s)
-- **Reddit**: Follow the Open WebUI subreddit for announcements, discussions, and user-submitted content.
+- **Reddit**: Follow the Open WebUI subreddit for announcements, discussions, and user-submitted content.  
   [Visit Reddit Community](https://www.reddit.com/r/OpenWebUI/)
+- **GitHub Community**: Participate in discussions, propose feature requests, and report issues specific to the Open WebUI Community Platform website.  
+  [Explore the GitHub Community](https://github.com/open-webui/community)
 
 ---
 
