--- a/docs/getting-started/advanced-topics/index.mdx
+++ b/docs/getting-started/advanced-topics/index.mdx
@@ -11,33 +11,33 @@ Explore deeper concepts and advanced configurations of Open WebUI to enhance you
 
 ## 🔧 Environment Configuration  
 Understand how to set environment variables to customize your Open WebUI setup.  
-[Environment Configuration Guide](./env-configuration)
+[Environment Configuration Guide](/getting-started/advanced-topics/env-configuration)
 
 ---
 
 ## 📊 Logging and Monitoring  
 Learn how to monitor, log, and troubleshoot your system effectively.  
-[Logging and Monitoring Guide](./logging)
+[Logging and Monitoring Guide](/getting-started/advanced-topics/logging)
 
 ---
 
 ## 🛠️ Development Guide  
 Dive into the development process and learn how to contribute to Open WebUI.  
-[Development Guide](./development)
+[Development Guide](/getting-started/advanced-topics/development)
 
 ---
 
 ## 🔒 HTTPS Encryption  
 Ensure secure communication by implementing HTTPS encryption in your deployment.  
-[HTTPS Encryption Guide](./https-encryption)
+[HTTPS Encryption Guide](/getting-started/advanced-topics/https-encryption)
 
 ---
 
 ## 🔗 API Endpoints  
 Get essential information for API integration and automation using our models.  
-[API Endpoints Guide](./api-endpoints)
+[API Endpoints Guide](/getting-started/advanced-topics/api-endpoints)
 
 ---
 
-Looking for installation instructions? Head over to our [Quick Start Guide](../quick-start).  
-Need to explore core features? Check out [Using OpenWebUI](../using-openwebui).
+Looking for installation instructions? Head over to our [Quick Start Guide](/getting-started/quick-start).  
+Need to explore core features? Check out [Using OpenWebUI](/getting-started/using-openwebui).
