Doc: Reorganized the work space section, fixing the links and spelling.
The workspace section has been reorganized.

Two of the links were broken due to the change in the file structure.

--- a/docs/features/workspace/index.mdx
+++ b/docs/features/workspace/index.mdx
@@ -1,4 +1,8 @@
 ---
-sidebar_position: 0
+sidebar_position: 2
 title: "🖥️ Workspace"
 ---
+
+# Workspace
+The **Workspace** in Open WebUI serves as the central hub for managing all key elements, including models, knowledge, functions, and tools. 
+This space provides an interface where you can organize, enable, and customize various models to suit your specific needs.
